--- a/Sistema LibBug/nbproject/private/private.properties
+++ b/Sistema LibBug/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Ada\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.jcalendar-1.4.jar=C:\\Users\\Erick\\Desktop\\Libug\\Bibliotecas Utilizadas\\jcalendar-1.4.jar
+user.properties.file=C:\\Users\\Erick\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
