comit das telas atualizadas

--- a/Sistema LibBug/nbproject/project.properties
+++ b/Sistema LibBug/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/Biblioteca.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Ada\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=..\\Bibliotecas Utilizadas\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -36,7 +37,8 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.beans-binding.classpath}:\
     ${libs.Jcalendar.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
