--- a/Sistema LibBug/nbproject/private/private.properties
+++ b/Sistema LibBug/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.jcalendar-1.4.jar=C:\\Users\\Erick\\Desktop\\Libug\\Bibliotecas Utilizadas\\jcalendar-1.4.jar
-user.properties.file=C:\\Users\\Cristian\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\walte\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
