--- a/Sistema LibBug/nbproject/project.properties
+++ b/Sistema LibBug/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\Ada\\Downloads\\jcalendar-1.4.jar\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=..\\Bibliotecas Utilizadas\\jcalendar-1.4.jar
+file.reference.mail.jar=..\\Bibliotecas Utilizadas\\mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -39,7 +40,8 @@ javac.classpath=\
     ${libs.Jcalendar.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${libs.iText1.classpath}
+    ${libs.iText1.classpath}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
